<resources>
    <string name="app_name">My Application</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="item">Item</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="social_login">Social Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="social_signup">Social Signup</string>
    <string name="signup">SIGNUP</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>